# omoide-sync

./: .gitignore  LICENSE  README.md  do_sync.sh  omoide_sync_config.example.toml  omoide_sync_credentials.example.toml  pyproject.toml
doc/: README.md
etc/: omoide_sync.service  omoide_sync.timer
omoide_sync/: __main__.py  cfg.py  const.py  exceptions.py  filesystem.py  models.py  setup_class.py  startup.py  stats.py  uploader.py  utils.py
omoide_sync/implementations/: __init__.py  client.py  logic.py  storage.py  stotage.py
omoide_sync/interfaces/: __init__.py  abs_client.py  abs_logic.py  abs_storage.py  abs_stotage.py
omoide_sync/models/: __init__.py  models.py  root.py  user.py
